--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,7 @@
   <body>
     <div class="main-content">
       {{>header}}
-      <p>This site was created by Arisa. It uses data from mapbox.com and darksky.net.</p>
+      <p>This site was created by Arisa. It uses data from mapbox.com and weatherstack.</p>
       <img class="portrait" src="/img/anonymous.fm.png" />
     </div>
     {{>footer}}
